build: ECJ doesn't support java16 yet.